--- a/_posts/2023-06-28-web-group.md
+++ b/_posts/2023-06-28-web-group.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Java交流群(QQ)
-tags: java 交流群 group qq
+title: Web前端交流群(QQ)
+tags: Web前端 交流群 group qq
 categories: post
 ---
 
