--- a/_posts/2023-09-02-vscode-.md
+++ b/_posts/2023-09-02-vscode-.md
@@ -10,3 +10,7 @@ categories: post
 2. 输入 `>Java:Show Type Hierarchy` 回车
 
 这时候左侧会菜单会多出一个图标，下一次点击这个图标就可以查看类的关系了。
+
+
+
+![aa](../static/img/1212.png)
