--- a/_posts/java-base/2023-10-21-java-c36-learn.md
+++ b/_posts/java-base/2023-10-21-java-c36-learn.md
@@ -5,3 +5,71 @@ tags: java learn 教程 Java基础教程
 categories: java-learn
 order: 9
 ---
+在Java中，`ArrayList` 是一个基于动态数组实现的列表，它属于Java集合框架（Java Collections Framework）的一部分。它在 `java.util` 包中，提供了使用动态数组存储元素的方法。与标准数组相比，`ArrayList` 的容量能自动增长。
+
+### ArrayList的主要特性
+
+1. **动态数组**:
+   `ArrayList` 内部使用数组存储元素，当添加更多元素时，其容量可以自动增长。
+
+2. **随机访问**:
+   `ArrayList` 提供了快速的随机访问能力，可以通过索引在常数时间内访问元素。
+
+3. **顺序存储**:
+   `ArrayList` 保持元素的插入顺序，可以轻松地在列表的任何位置添加或删除元素。
+
+4. **可包含重复元素**:
+   `ArrayList` 可以包含重复的元素。
+
+5. **非同步**:
+   `ArrayList` 是非同步的。如果多个线程同时访问一个 `ArrayList`，而其中至少有一个线程修改了列表，则必须在外部同步。
+
+### ArrayList的主要方法
+
+- `add(E e)`: 向列表尾部添加一个元素。
+- `add(int index, E element)`: 在指定位置添加元素。
+- `get(int index)`: 返回指定位置的元素。
+- `remove(int index)`: 移除指定位置的元素。
+- `set(int index, E element)`: 替换指定位置的元素。
+- `size()`: 返回列表中的元素数。
+- `isEmpty()`: 判断列表是否为空。
+- `clear()`: 清空列表中的所有元素。
+
+### 使用示例
+
+```java
+import java.util.ArrayList;
+import java.util.List;
+
+public class ArrayListExample {
+    public static void main(String[] args) {
+        List<String> list = new ArrayList<>();
+        list.add("Apple");
+        list.add("Banana");
+        list.add("Cherry");
+
+        System.out.println(list.get(1)); // 输出 "Banana"
+
+        list.remove("Banana");
+        for (String fruit : list) {
+            System.out.println(fruit);
+        }
+        // 输出 "Apple" 和 "Cherry"
+    }
+}
+```
+
+在这个例子中，创建了一个 `ArrayList` 实例，并向其中添加了一些水果。然后，程序打印出第二个元素，移除“Banana”，并遍历列表打印剩余的元素。
+
+### 注意事项
+
+- **扩容机制**:
+  当 `ArrayList` 的内部数组达到容量上限时，它会创建一个新的数组，并将现有元素复制到新数组中，这个过程称为“扩容”，可能会影响性能。
+
+- **随机访问与插入/删除效率**:
+  `ArrayList` 适用于频繁的随机访问场景。但在列表中间插入或删除元素可能比较慢，因为这可能涉及到移动元素以维护列表的连续性。
+
+- **初始容量设置**:
+  如果预先知道列表大概需要存储多少元素，可以在创建 `ArrayList` 时指定一个初始容量，以减少扩容操作的频率。
+
+`ArrayList` 是处理列表数据时的一种常用选择，特别是当需要快速随机访问元素时。但如果需要频繁地在列表中间插入或删除元素，其他数据结构（如 `LinkedList`）可能更合适。
