--- a/_posts/java-base/2023-10-21-java-c37-learn.md
+++ b/_posts/java-base/2023-10-21-java-c37-learn.md
@@ -5,3 +5,65 @@ tags: java learn 教程 Java基础教程
 categories: java-learn
 order: 9
 ---
+在Java中，`LinkedList` 是一个实现了 `List` 接口和 `Deque` 接口的双向链表。它提供了列表的操作，并允许在列表的两端插入和删除元素。`LinkedList` 在 `java.util` 包中。
+
+### LinkedList的主要特性
+
+1. **双向链表**:
+   每个元素（节点）都有指向前一个和后一个元素的引用。
+
+2. **可随机访问**:
+   尽管`LinkedList` 实现了 `List` 接口，但随机访问（例如通过索引获取元素）在 `LinkedList` 中不如 `ArrayList` 高效，因为它需要从头或尾遍历列表。
+
+3. **实现`Deque`接口**:
+   `LinkedList` 可以作为双端队列使用，支持在头部和尾部添加或移除元素。
+
+4. **无容量限制**:
+   `LinkedList` 的大小不受限制，只受可用内存的限制。
+
+### LinkedList的主要方法
+
+- `add(E e)`: 在链表尾部添加一个元素。
+- `add(int index, E element)`: 在指定位置插入元素。
+- `get(int index)`: 获取指定位置的元素。
+- `remove(int index)`: 移除指定位置的元素。
+- `size()`: 返回链表中的元素数量。
+- `isEmpty()`: 判断链表是否为空。
+- `addFirst(E e)` 和 `addLast(E e)`: 在链表的开始或结尾添加元素。
+- `removeFirst()` 和 `removeLast()`: 移除链表的第一个或最后一个元素。
+
+### 使用示例
+
+```java
+import java.util.LinkedList;
+
+public class LinkedListExample {
+    public static void main(String[] args) {
+        LinkedList<String> list = new LinkedList<>();
+        list.add("Apple");
+        list.add("Banana");
+        list.addFirst("Cherry");
+
+        System.out.println(list.get(1)); // 输出 "Apple"
+
+        list.removeLast();
+        for (String fruit : list) {
+            System.out.println(fruit);
+        }
+        // 输出 "Cherry" 和 "Apple"
+    }
+}
+```
+
+在这个例子中，创建了一个 `LinkedList` 实例，并向其中添加了一些水果。然后，程序打印出第二个元素，移除最后一个元素，并遍历链表打印剩余的元素。
+
+### 注意事项
+
+- **性能考虑**:
+  - 添加或删除元素（特别是在列表的两端）通常比 `ArrayList` 更高效，因为不需要重新调整数组大小。
+  - 但是，对于随机访问操作，`LinkedList` 比 `ArrayList` 效率低，因为它需要从头部或尾部开始遍历。
+
+- **内存占用**:
+  相比于 `ArrayList`，`LinkedList` 对于每个元素需要更多的内存，因为它还存储了前驱和后继节点的引用。
+
+`LinkedList` 适用于频繁在列表两端添加或删除元素的场景，以及列表元素数量变化较大的情况。但如果需要频繁随机访问元素，`ArrayList` 可能是更好的选择。
