--- a/_posts/java-base/2023-10-21-java-c39-learn.md
+++ b/_posts/java-base/2023-10-21-java-c39-learn.md
@@ -5,3 +5,69 @@ tags: java learn 教程 Java基础教程
 categories: java-learn
 order: 9
 ---
+`HashMap` 是Java中一个非常常用的集合类，属于Java集合框架（Java Collections Framework）的一部分。它在 `java.util` 包中，提供了一个以键值对形式存储元素的映射。`HashMap` 实现了 `Map` 接口，因此它不维护键或值的顺序。
+
+### HashMap的主要特性
+
+1. **键值对**:
+   每个元素都是一个键值对（`Entry`），即将键映射到对应的值。
+
+2. **唯一键**:
+   键是唯一的，但不同的键可以映射到相同的值。
+
+3. **null键和null值**:
+   `HashMap` 允许将 `null` 作为键和值，但只能有一个 `null` 键。
+
+4. **无序集合**:
+   `HashMap` 不保证元素的顺序，元素的存储取决于键的哈希码。
+
+5. **非同步**:
+   `HashMap` 是非同步的，如果多线程同时访问它且至少有一个线程修改了映射，则必须在外部同步。
+
+### HashMap的主要方法
+
+- `put(K key, V value)`: 将指定的值与此映射中的指定键关联。
+- `get(Object key)`: 返回指定键所映射的值，如果此映射不包含该键的映射关系，则返回 `null`。
+- `remove(Object key)`: 如果存在一个键的映射关系，则将其从映射中移除。
+- `containsKey(Object key)`: 如果此映射包含指定键的映射关系，则返回 `true`。
+- `size()`: 返回映射中的键值对数量。
+- `isEmpty()`: 如果映射不包含键值对，则返回 `true`。
+
+### 使用示例
+
+```java
+import java.util.HashMap;
+import java.util.Map;
+
+public class HashMapExample {
+    public static void main(String[] args) {
+        Map<String, Integer> map = new HashMap<>();
+        map.put("Apple", 3);
+        map.put("Banana", 5);
+        map.put("Cherry", 2);
+
+        System.out.println("Apple's count: " + map.get("Apple"));
+        
+        map.remove("Cherry");
+        
+        for (Map.Entry<String, Integer> entry : map.entrySet()) {
+            System.out.println(entry.getKey() + ": " + entry.getValue());
+        }
+    }
+}
+```
+
+在这个例子中，创建了一个 `HashMap` 实例，其中包含一些水果及其数量。然后，程序打印出“Apple”的数量，移除“Cherry”的条目，并遍历映射打印剩余条目。
+
+### 注意事项
+
+- **性能**:
+  `HashMap` 通常提供常数时间的性能（`O(1)`）用于基本操作（`get` 和 `put`），假设哈希函数将元素合理地分布在桶中。
+
+- **容量和加载因子**:
+  `HashMap` 的性能受其容量（桶的数量）和加载因子（决定何时增加容量以维护常数时间性能）的影响。加载因子默认为 `0.75`，这是时间和空间成本的良好折衷。
+
+- **哈希冲突和链表**:
+  当多个键映射到相同哈希值时，会发生哈希冲突，`HashMap` 通过链表或红黑树（当链表过长时）解决冲突。
+
+`HashMap` 是Java中处理映射关系的基本工具，适用于需要快速查找、插入和删除键值对的场景。
