--- a/_posts/java-base/2023-10-21-java-c41-learn.md
+++ b/_posts/java-base/2023-10-21-java-c41-learn.md
@@ -3,5 +3,37 @@ layout: post
 title: Java基础：Java Object 类
 tags: java learn 教程 Java基础教程
 categories: java-learn
-order: 9
+order: 41
 ---
+Java中的`Object`类是所有类的超类（父类）。换句话说，所有Java类都直接或间接地继承自`Object`类。如果一个类没有明确地指定它的父类，那么这个类默认继承自`Object`。这个类定义在`java.lang`包中，因此它不需要显式导入。
+
+`Object`类是Java编程语言的核心，提供了一些基本的行为（方法），这些行为对于所有Java对象都是通用的。以下是`Object`类提供的一些关键方法：
+
+1. **`public final Class<?> getClass()`**:
+   返回此对象运行时的类。`getClass()` 方法是一个原生方法，它提供了运行时系统的能力。使用这个方法，我们可以获得对象所属的类的`Class`对象。
+
+2. **`public int hashCode()`**:
+   返回对象的哈希码值。此方法是用于哈希表的，如`HashMap`。
+
+3. **`public boolean equals(Object obj)`**:
+   比较调用对象与参数对象是否相等。此方法在`Object`类中的默认实现是比较对象的内存地址。
+
+4. **`protected Object clone()` throws CloneNotSupportedException**:
+   创建并返回此对象的一个副本。`clone()` 方法是一个原生方法。
+
+5. **`public String toString()`**:
+   返回对象的字符串表示。默认实现返回类名，后跟 "@" 符号和对象的哈希码的无符号十六进制表示。
+
+6. **`public final void notify()`**:
+   唤醒在此对象的监视器上等待的单个线程。用于多线程。
+
+7. **`public final void notifyAll()`**:
+   唤醒在此对象的监视器上等待的所有线程。
+
+8. **`public final void wait(long timeout)` throws InterruptedException**:
+   导致当前线程等待，直到其他线程调用此对象的`notify()`方法或`notifyAll()`方法，或者超过指定的时间量。
+
+9. **`protected void finalize()` throws Throwable**:
+   在垃圾回收器删除对象之前，由垃圾回收器调用此方法进行清理操作。自Java 9起，此方法已被弃用。
+
+了解`Object`类及其方法对于理解Java对象的基本行为非常重要。在实际编程中，通常会根据需要重写这些方法，如`equals()`、`hashCode()`和`toString()`，以提供类特定的行为。
