--- a/_posts/java-base/2023-10-21-java-c11-learn.md
+++ b/_posts/java-base/2023-10-21-java-c11-learn.md
@@ -5,3 +5,66 @@ tags: java learn 教程 Java基础教程
 categories: java-learn
 order: 9
 ---
+Java提供了多种循环结构，以实现代码的重复执行。这些循环结构包括 `for` 循环、`while` 循环和 `do...while` 循环。每种循环结构都有其特定的用途和适用场景。
+
+### 1. For 循环
+`for` 循环提供了一种初始化循环变量、检查循环条件和更新循环变量的简洁方式。它适用于执行已知次数的循环。
+
+**语法**:
+```java
+for (初始化; 布尔表达式; 更新循环变量) {
+    // 代码块
+}
+```
+
+**示例**:
+```java
+for (int i = 0; i < 5; i++) {
+    System.out.println("i = " + i);
+}
+```
+
+### 2. While 循环
+`while` 循环在给定的布尔表达式为 `true` 时重复执行代码块。它适用于当你事先不知道循环次数，但条件是已知的场景。
+
+**语法**:
+```java
+while (布尔表达式) {
+    // 代码块
+}
+```
+
+**示例**:
+```java
+int i = 0;
+while (i < 5) {
+    System.out.println("i = " + i);
+    i++;
+}
+```
+
+### 3. Do...While 循环
+`do...while` 循环至少执行一次代码块，然后在给定的布尔表达式为 `true` 时重复执行。与 `while` 循环不同，`do...while` 循环至少执行一次代码块，即使条件一开始就是假的。
+
+**语法**:
+```java
+do {
+    // 代码块
+} while (布尔表达式);
+```
+
+**示例**:
+```java
+int i = 0;
+do {
+    System.out.println("i = " + i);
+    i++;
+} while (i < 5);
+```
+
+### 循环的选择
+- 使用 `for` 循环，当你知道循环必须执行的确切次数时。
+- 使用 `while` 循环，当你需要循环直到满足特定条件，但事先不知道需要循环多少次时。
+- 使用 `do...while` 循环，当你至少需要执行循环体一次时，之后可能会根据条件重复执行。
+
+在实际编程中，选择合适的循环结构可以使代码更清晰、更易于理解和维护。
