--- a/_posts/dev/2024-08-09-rust-one.md
+++ b/_posts/dev/2024-08-09-rust-one.md
@@ -2,7 +2,7 @@
 layout: post
 title: 程序员体验Rust感想
 tags: dev rust 
-categories: dev
+categories: 编程
 ---
 
 Rust体验日记,作为一名语言体验师,对市面上大多数留下的语言都会尝试一下,至少要实现一个简单的helloworld.
