--- a/_posts/java-base/2023-10-21-java-c10-learn.md
+++ b/_posts/java-base/2023-10-21-java-c10-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java 运算符
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 9
 ---
 Java中的运算符用于执行特定的运算，如算术运算、比较运算、逻辑运算等。以下是Java中常见的运算符类型及其使用示例：
