--- a/_posts/java-base/2023-10-21-java-c11-learn.md
+++ b/_posts/java-base/2023-10-21-java-c11-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java 循环结构 - for, while 及 do...while
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 9
 ---
 Java提供了多种循环结构，以实现代码的重复执行。这些循环结构包括 `for` 循环、`while` 循环和 `do...while` 循环。每种循环结构都有其特定的用途和适用场景。
