--- a/_posts/java-base/2023-10-21-java-c12-learn.md
+++ b/_posts/java-base/2023-10-21-java-c12-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java 条件语句 - if...else
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 9
 ---
 在Java中，`if...else` 语句是用于基于条件执行不同代码块的一种控制流语句。根据条件表达式的值（`true` 或 `false`），程序将决定执行哪个代码块。
