--- a/_posts/java-base/2023-10-21-java-c36-learn.md
+++ b/_posts/java-base/2023-10-21-java-c36-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java ArrayList
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 9
 ---
 在Java中，`ArrayList` 是一个基于动态数组实现的列表，它属于Java集合框架（Java Collections Framework）的一部分。它在 `java.util` 包中，提供了使用动态数组存储元素的方法。与标准数组相比，`ArrayList` 的容量能自动增长。
