--- a/_posts/java-base/2023-10-21-java-c37-learn.md
+++ b/_posts/java-base/2023-10-21-java-c37-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java LinkedList
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 9
 ---
 在Java中，`LinkedList` 是一个实现了 `List` 接口和 `Deque` 接口的双向链表。它提供了列表的操作，并允许在列表的两端插入和删除元素。`LinkedList` 在 `java.util` 包中。
