--- a/_posts/java-base/2023-10-21-java-c38-learn.md
+++ b/_posts/java-base/2023-10-21-java-c38-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java HashSet
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 9
 ---
 在Java中，`HashSet` 是一种基于哈希表的集合。它实现了 `Set` 接口，由哈希表（实际上是一个 `HashMap` 实例）支持。`HashSet` 存储的是不重复的元素集合，它不保证集合的迭代顺序；特别是，它不保证该顺序恒久不变。
