--- a/_posts/java-base/2023-10-21-java-c40-learn.md
+++ b/_posts/java-base/2023-10-21-java-c40-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java Iterator（迭代器）
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 9
 ---
 在Java中，`Iterator` 是一个接口，提供了遍历集合（如列表、集合和映射等）的方法。它属于 `java.util` 包。迭代器允许以统一的方式访问集合的元素，而无需关心集合的内部结构。
