--- a/_posts/java-base/2023-10-21-java-c41-learn.md
+++ b/_posts/java-base/2023-10-21-java-c41-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java Object 类
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 41
 ---
 Java中的`Object`类是所有类的超类（父类）。换句话说，所有Java类都直接或间接地继承自`Object`类。如果一个类没有明确地指定它的父类，那么这个类默认继承自`Object`。这个类定义在`java.lang`包中，因此它不需要显式导入。
