--- a/_posts/java-base/2023-10-21-java-c42-learn.md
+++ b/_posts/java-base/2023-10-21-java-c42-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java 泛型
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 9
 ---
 Java中的泛型是一种在编译时提供类型安全性的机制，同时它也允许程序员重用代码。泛型的引入减少了代码的冗余，并增加了类型的灵活性和安全性。
