--- a/_posts/java-base/2023-10-21-java-c43-learn.md
+++ b/_posts/java-base/2023-10-21-java-c43-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java 序列化
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 21
 ---
 Java 序列化是一种将对象的状态转换为字节流的机制，以便可以将其保存到文件、数据库或在网络上进行传输。当需要再次使用这些数据时，可以从字节流中重建对象。这个过程在Java中通过实现 `java.io.Serializable` 接口来实施。
