--- a/_posts/java-base/2023-10-21-java-c44-learn.md
+++ b/_posts/java-base/2023-10-21-java-c44-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java 网络编程
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 44
 ---
 Java 网络编程是一个广泛的领域，涉及到在网络中的数据交换和通信。Java 提供了强大的API来支持网络编程，包括基于TCP/IP的低级套接字编程和基于HTTP的高级网络交互。以下是Java网络编程的一些关键概念和组件：
