--- a/_posts/java-base/2023-10-21-java-c45-learn.md
+++ b/_posts/java-base/2023-10-21-java-c45-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java 多线程编程
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 46
 ---
 Java 中的多线程编程是一个核心且广泛应用的领域，它允许同时运行多个线程，提高程序的性能和响应能力。以下是一些基础概念和关键点：
