--- a/_posts/java-base/2023-10-21-java-c46-learn.md
+++ b/_posts/java-base/2023-10-21-java-c46-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java 9~20 新特性
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 47
 ---
 Java 9 至 Java 21 之间的版本引入了许多重要的新特性。这里是一些重点概述：
