--- a/_posts/java-base/2023-10-21-java-c17-learn.md
+++ b/_posts/java-base/2023-10-21-java-c17-learn.md
@@ -2,6 +2,6 @@
 layout: post
 title: Java基础：Java StringBuffer 和 StringBuilder 类
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 9
 ---
