--- a/_posts/java-base/2023-10-21-java-c39-learn.md
+++ b/_posts/java-base/2023-10-21-java-c39-learn.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java基础：Java HashMap
 tags: java learn 教程 Java基础教程
-categories: java-learn
+categories: Java文档
 order: 9
 ---
 `HashMap` 是Java中一个非常常用的集合类，属于Java集合框架（Java Collections Framework）的一部分。它在 `java.util` 包中，提供了一个以键值对形式存储元素的映射。`HashMap` 实现了 `Map` 接口，因此它不维护键或值的顺序。
