阿斯顿发大水

--- a/_posts/2023-09-02-vscode-.md
+++ b/_posts/2023-09-02-vscode-.md
@@ -2,6 +2,7 @@
 layout: post
 title: VSCode Java 如何查看 java 类的关系，所有的父类所有的子类
 tags: vscode java tool
+categories: vscode-for-java
 日志
 ---
 首先，确保你安装了VScode 开发java的插件。
